--- a/tratamientos.html
+++ b/tratamientos.html
@@ -46,7 +46,7 @@
      
   <div class="carousel-inner">
         <div class="carousel-item active">
-          <img class="img-fluid"    src="images/banner1.jpg">
+          <img class="img-fluid"    src="images/">
         </div>
         <div class="carousel-item">
           <img class="img-fluid" src="images/banner2.jpg">
